; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/gdb/gdb/extr_remote-mips.c_mips_store_registers.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/gdb/gdb/extr_remote-mips.c_mips_store_registers.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@NUM_REGS = common dso_local global i32 0, align 4
@mips_receive_wait = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [28 x i8] c"Can't write register %d: %s\00", align 1
@errno = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32)* @mips_store_registers to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @mips_store_registers(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %4 = load i32, i32* %2, align 4
  %5 = icmp eq i32 %4, -1
  br i1 %5, label %6, label %17

6:                                                ; preds = %1
  store i32 0, i32* %2, align 4
  br label %7

7:                                                ; preds = %13, %6
  %8 = load i32, i32* %2, align 4
  %9 = load i32, i32* @NUM_REGS, align 4
  %10 = icmp slt i32 %8, %9
  br i1 %10, label %11, label %16

11:                                               ; preds = %7
  %12 = load i32, i32* %2, align 4
  call void @mips_store_registers(i32 %12)
  br label %13

13:                                               ; preds = %11
  %14 = load i32, i32* %2, align 4
  %15 = add nsw i32 %14, 1
  store i32 %15, i32* %2, align 4
  br label %7

16:                                               ; preds = %7
  br label %31

17:                                               ; preds = %1
  %18 = load i32, i32* %2, align 4
  %19 = call i32 @mips_map_regno(i32 %18)
  %20 = load i32, i32* %2, align 4
  %21 = call i32 @read_register(i32 %20)
  %22 = load i32, i32* @mips_receive_wait, align 4
  %23 = call i32 @mips_request(i8 signext 82, i32 %19, i32 %21, i32* %3, i32 %22, i32* null)
  %24 = load i32, i32* %3, align 4
  %25 = icmp ne i32 %24, 0
  br i1 %25, label %26, label %31

26:                                               ; preds = %17
  %27 = load i32, i32* %2, align 4
  %28 = load i32, i32* @errno, align 4
  %29 = call i32 @safe_strerror(i32 %28)
  %30 = call i32 @mips_error(i8* getelementptr inbounds ([28 x i8], [28 x i8]* @.str, i64 0, i64 0), i32 %27, i32 %29)
  br label %31

31:                                               ; preds = %16, %26, %17
  ret void
}

declare dso_local i32 @mips_request(i8 signext, i32, i32, i32*, i32, i32*) #1

declare dso_local i32 @mips_map_regno(i32) #1

declare dso_local i32 @read_register(i32) #1

declare dso_local i32 @mips_error(i8*, i32, i32) #1

declare dso_local i32 @safe_strerror(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
